--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -212,7 +212,7 @@ jobs:
           node_version: ${{ inputs.node-version }}
           gh_access_token: ${{ secrets.gh_access_token }}
       - name: Run integration tests
-        uses: kkp-dfs/dime-github-actions-workflows/integration-test@main
+        uses: kkp-dfs/dime-github-actions-workflows/integration-test@redzone
         with:
           application_name: ${{ inputs.application_name }}
           language: ${{ inputs.code_lang }}
