--- a/db-migration/action.yaml
+++ b/db-migration/action.yaml
@@ -6,6 +6,10 @@ inputs:
     description: Environment that would like to deploy services
     required: true
     default: sit
+  cluster:
+    description: destination cluster name
+    required: false
+    default: dime-main
   application_name:
     description: Name of application
     required: true
@@ -49,7 +53,7 @@ runs:
 
         JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
         echo "{\"role\":\"kubernetes-actions-runner\",\"jwt\":\"$JWT\"}" > payload.json
-        TOKEN=$(curl -d @payload.json https://vault.mydime.tech/v1/auth/kubernetes/actions-runner/dime-main/login | jq -r '.auth.client_token')
+        TOKEN=$(curl -d @payload.json https://vault.mydime.tech/v1/auth/kubernetes/actions-runner/${{ inputs.cluster }}/login | jq -r '.auth.client_token')
 
         echo "::set-output name=host::$(cat values.yaml | yq eval '.application.values.configmaps.default.data.DB_HOST' -)"
         echo "::set-output name=port::$(cat values.yaml | yq eval '.application.values.configmaps.default.data.DB_PORT' -)"
