--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -6,6 +6,10 @@ inputs:
     description: Environment that would like to deploy services
     required: true
     default: sit
+  cluster:
+    description: destination cluster name
+    required: false
+    default: dime-sit
   application_name:
     description: Name of application
     required: true
@@ -58,7 +62,7 @@ runs:
 
         JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
         echo "{\"role\":\"kubernetes-actions-runner\",\"jwt\":\"$JWT\"}" > payload.json
-        TOKEN=$(curl -d @payload.json https://vault.mydime.tech/v1/auth/kubernetes/actions-runner/dime-sit/login | jq -r '.auth.client_token')
+        TOKEN=$(curl -d @payload.json https://vault.mydime.tech/v1/auth/kubernetes/actions-runner/${{ inputs.cluster }}/login | jq -r '.auth.client_token')
 
         DB=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/database/sit)
         DB_HOST=$(cat values.yaml | yq eval '.application.values.configmaps.default.data.DB_HOST' -)
