--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -219,7 +219,7 @@ jobs:
       - name: Run integration tests
         uses: kkp-dfs/dime-github-actions-workflows/integration-test@redzone
         with:
-          cluster: ${{ inputs.cluster_prefix }}-${{ inputs.environment }}
+          cluster_prefix: ${{ inputs.cluster_prefix }}
           application_name: ${{ inputs.application_name }}
           language: ${{ inputs.code_lang }}
           migration: ${{ inputs.migration }}
