--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -65,7 +65,6 @@ runs:
         TOKEN=$(curl -d @payload.json https://vault.mydime.tech/v1/auth/kubernetes/actions-runner/${{ inputs.cluster_prefix }}-${{ inputs.environment }}/login | jq -r '.auth.client_token')
 
         VAULT_URL=https://vault.mydime.tech/v1/secrets/data/database$(echo ${{ inputs.cluster_prefix }}-${{ inputs.environment }} | sed -e 's/dime-/\//g' | sed -e 's/-/\//g')
-        echo $VAULT_URL
         DB=$(curl -H "X-Vault-Token:$TOKEN" $VAULT_URL)
         DB_HOST=$(cat values.yaml | yq eval '.application.values.configmaps.default.data.DB_HOST' -)
         DB_PORT=$(cat values.yaml | yq eval '.application.values.configmaps.default.data.DB_PORT' -)
@@ -86,11 +85,12 @@ runs:
         mysql --host=${DB_HOST} --port=${DB_PORT} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "CREATE USER IF NOT EXISTS '${DB_USER:0:32}'@'%' IDENTIFIED BY '${DB_PASS}';"
         mysql --host=${DB_HOST} --port=${DB_PORT} -u $DB_ADMIN_USER -p${DB_ADMIN_PASS} -e "GRANT ALL PRIVILEGES ON ${DB_NAME//-/_}.* TO '${DB_USER:0:32}'@'%'; FLUSH PRIVILEGES;"
         if [ "${{ inputs.migration }}" == "true" ]; then
+          cd ../
           dbmate --wait -d ${{ inputs.migrate_dir }} -s ${{ inputs.migrate_schema }} -u mysql://${DB_ADMIN_USER}:${DB_ADMIN_PASS}@${DB_HOST}/${DB_NAME//-/_} up
         fi
 
         RMQ=$(curl -H "X-Vault-Token:$TOKEN" https://vault.mydime.tech/v1/secrets/data/rabbitmq/sit)
-        RMQ_HOST=rmq-server-rabbitmq.rabbitmq.svc.cluster.local
+        RMQ_HOST=k8s-rabbitmq-rmqserve-74cb1dc39b-c9c3c8b01ed8ac4a.elb.ap-southeast-1.amazonaws.com
         RMQ_PORT=5672
         RMQ_ADMIN_USER=$(echo $RMQ | jq -r '.data.data.admin_username')
         RMQ_ADMIN_PASS=$(echo $RMQ | jq -r '.data.data.admin_password')
