--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -329,7 +329,7 @@ jobs:
           environment: sit
           release_name: ${{ inputs.application_name }}-sit
           helm_ref: ${{ inputs.helm_ref }}
-          cluster: ${{ inputs.cluster }}-${{ inputs.environment }}
+          cluster: ${{ inputs.cluster_prefix }}-${{ inputs.environment }}
           namespace: ${{ inputs.namespace }}
           application_name: ${{ inputs.application_name }}
           endpoint: ${{ needs.setup.outputs.endpoint }}
