--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -50,6 +50,14 @@ jobs:
           EOF
           chmod 600 $HOME/.netrc
 
+          cat <<EOF > android/local.properties
+          sdk.dir=$HOME/Library/Android/sdk
+          flutter.sdk=/opt/flutter
+          flutter.buildMode=debug
+          flutter.versionName=1.0.0
+          flutter.versionCode=1
+          EOF
+
           export PATH=/opt/homebrew/opt/openjdk/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/opt/flutter/bin:$PATH
           source /Users/dime/.bash_profile
           export RBENV_VERSION=2.7.5
