--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -57,6 +57,7 @@ jobs:
           flutter.versionName=1.0.0
           flutter.versionCode=1
           EOF
+          gradle wrapper -p android
 
           export PATH=/opt/homebrew/opt/openjdk/bin:/opt/homebrew/bin:/opt/homebrew/sbin:/opt/flutter/bin:$PATH
           source /Users/dime/.bash_profile
