install flutter package

--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -72,6 +72,7 @@ jobs:
           gem -v
           bundle -v
           flutter --version
+          flutter pub get
 
           echo '### Setup environment ###'
           cd ${{ inputs.platform }}
