create environment secret file

--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -30,9 +30,36 @@ env:
   LANE: '${{ inputs.platform }}_${{ inputs.target_env }}_app'
 
 jobs:
+  prepare:
+    name: Prepare environment secret file
+    runs-on: [self-hosted, linux, main, deployment]
+    steps:
+      - name: Generate environment secret file
+        run: |
+          JWT=$(cat /var/run/secrets/kubernetes.io/serviceaccount/token)
+          echo "{\"role\":\"kubernetes-actions-runner\",\"jwt\":\"$JWT\"}" > payload.json
+          TOKEN=$(curl -d @payload.json https://vault.mydime.tech/v1/auth/kubernetes/actions-runner/main/login | jq -r '.auth.client_token')
+          DATA=$(curl -H "X-VAULT-TOKEN:$TOKEN" https:/vault.mydime.tech/v1/secrets/data/services/dime-app/${{ inputs.target_env }})
+
+          export DIRECTUS_ACCESS_TOKEN=$(echo $DATA | jq -r ".data.data.DIRECTUS_ACCESS_TOKEN")
+          export PASSWORD_HASHING_SALT=$(echo $DATA | jq -r ".data.data.PASSWORD_HASHING_SALT")
+          export SECURE_ED25519_PUBLIC_KEY=$(echo $DATA | jq -r ".data.data.SECURE_ED25519_PUBLIC_KEY")
+          export SECURE_RSA_PUBLIC_KEY=$(echo $DATA | jq -r ".data.data.SECURE_RSA_PUBLIC_KEY")
+          export SIGN_IN_RSA_PUBLIC_KEY=$(echo $DATA | jq -r ".data.data.SIGN_IN_RSA_PUBLIC_KEY")
+
+          curl -L https://github.com/a8m/envsubst/releases/download/v1.2.0/envsubst-`uname -s`-`uname -m` -o envsubst
+          chmod +x envsubst
+          ./envsubst < environment_secret_template.yaml > environment_secret_${{ inputs.target_env }}.yaml
+      - name: Save environment secret file
+        uses: actions/cache@v2
+        with:
+          path: environment_secret_${{ inputs.target_env }}.yaml
+          key: nvironment_secret_${{ inputs.target_env }}
+
   fastlane_build:
     name: ${{ inputs.platform }}_${{ inputs.target_env }}_app
     runs-on: [self-hosted, macOS]
+    needs: [prepare]
     steps:
       - uses: kkp-dfs/dime-github-actions-workflows/checkout@main
         with:
@@ -41,6 +68,11 @@ jobs:
       - uses: kkp-dfs/dime-github-actions-workflows/common@main
         with:
           gh_access_token: ${{ inputs.gh_access_token }}
+      - name: Restore environment secret file
+        uses: actions/cache@v2
+        with:
+          path: environment_secret_${{ inputs.target_env }}.yaml
+          key: nvironment_secret_${{ inputs.target_env }}
       - name: setup bundler
         run: |
           export PATH=$PATH:/opt/homebrew/bin
@@ -73,6 +105,7 @@ jobs:
           bundle -v
           flutter --version
           flutter pub get
+          make gen-config-${{ inputs.target_env }}
 
           echo '### Setup environment ###'
           cd ${{ inputs.platform }}
