--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -54,11 +54,11 @@ jobs:
           curl -L https://github.com/a8m/envsubst/releases/download/v1.2.0/envsubst-`uname -s`-`uname -m` -o envsubst
           chmod +x envsubst
           ./envsubst < environment_secret_template.yaml > environment_secret_${{ inputs.target_env }}.yaml
-      - uses: actions/cache@v3
+      - uses: actions/upload-artifact@v3
         with:
+          name: environment_secret_${{ inputs.target_env }}_${{ github.sha }}
           path: environment_secret_${{ inputs.target_env }}.yaml
-          key: environment_secret_${{ inputs.target_env }}
-
+          retention-days: 1
   fastlane_build:
     name: ${{ inputs.platform }}_${{ inputs.target_env }}_app
     runs-on: [self-hosted, macOS]
@@ -71,14 +71,13 @@ jobs:
       - uses: kkp-dfs/dime-github-actions-workflows/common@main
         with:
           gh_access_token: ${{ inputs.gh_access_token }}
-      - uses: actions/cache@v3
+      - uses: actions/download-artifact@v3
         with:
-          path: environment_secret_${{ inputs.target_env }}.yaml
-          key: environment_secret_${{ inputs.target_env }}
+          name: environment_secret_${{ inputs.target_env }}_${{ github.sha }}
+      # - run: curl -X DELETE -H "Accept:application/vnd.github.v3+json" https://api.github.com/repos/${{ github.repository }}/actions/artifacts/ARTIFACT_ID
       - name: setup bundler
         run: |
           export PATH=$PATH:/opt/homebrew/bin
-
           cat <<EOF > $HOME/.netrc
           machine github.com
             login ${{ secrets.gh_access_token }}
@@ -120,4 +119,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.gh_access_token }}
           LANE: '${{ inputs.platform }}_${{ inputs.target_env }}_app'
-
