--- a/.github/workflows/dime-app-release.yml
+++ b/.github/workflows/dime-app-release.yml
@@ -75,6 +75,8 @@ jobs:
         with:
           name: environment_secret_${{ inputs.target_env }}_${{ github.sha }}
       # - run: curl -X DELETE -H "Accept:application/vnd.github.v3+json" https://api.github.com/repos/${{ github.repository }}/actions/artifacts/ARTIFACT_ID
+      - run: cp /Users/dime/google-services.json ./android/app/
+        if: ${{ inputs.platform == 'android' }}
       - name: setup bundler
         run: |
           export PATH=$PATH:/opt/homebrew/bin
@@ -108,9 +110,6 @@ jobs:
 
           echo '### Setup environment ###'
           make gen-config-${{ inputs.target_env }}
-          if [[ "${{ inputs.platform }}" == "android" ]]; then
-            cp /Users/dime/google-services.json ./android/app/
-          fi
           cd ${{ inputs.platform }}
           bundle install
           bundle update fastlane
@@ -118,7 +117,7 @@ jobs:
           echo '### Start building app ###'
           bundle exec fastlane -v
           bundle exec fastlane update_plugins
-          bundle exec fastlane ${{ inputs.platform }} ${{ env.LANE }}
+          bundle exec fastlane ${{ env.LANE }}
         env:
           GITHUB_TOKEN: ${{ secrets.gh_access_token }}
           LANE: '${{ inputs.platform }}_${{ inputs.target_env }}_app'
